game project - basic layout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Workshops</title>
-
+    <title>Online Games Catalog</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   </head>
@@ -13,7 +12,10 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Sf2 Workshops</a>
+          <a class="navbar-brand" href="#">Online Games Catalog</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            {% include '_menu.html.twig' %}
         </div>
       </div>
     </div>
