--- a/src/Btn/AppBundle/Resources/views/layout.html.twig
+++ b/src/Btn/AppBundle/Resources/views/layout.html.twig
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-4">
             {% block sidebar %}
-                sidebar
+                {% include 'BtnAppBundle::_sidebar.html.twig' %}
             {% endblock %}
         </div>
         <div class="col-md-8">
