--- a/src/Btn/AppBundle/Resources/views/Game/show.html.twig
+++ b/src/Btn/AppBundle/Resources/views/Game/show.html.twig
@@ -1,13 +1,13 @@
 {% extends 'BtnAppBundle::layout.html.twig' %}
 
-{% block title %}{{ parent() }} - Infamous{% endblock %}
+{% block title %}{{ parent() }} - {{ game.name }}{% endblock %}
 
 {% block content %}
-    <h1>Infamous</h1>
+    <h1>{{ game.name }}</h1>
     <hr />
-    Ubisoft | 22-05-2004 | PS4, PS3, PS VITA
+    {{ game.developer }} | {{ game.releasedAt|date('d-m-Y') }} | PS4, PS3, PS VITA
     <hr />
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, eveniet voluptas illum! Reprehenderit, ut quae labore tempora. Corrupti, veniam, nulla quo libero ipsum odit nisi ipsa laudantium nam eos earum.</p>
+    <p>{{ game.description }}</p>
 
     <a href="{{ path('games_list') }}" class="btn btn-default">&laquo; Back to list</a>
 {% endblock %}
