--- a/src/Btn/AppBundle/Resources/views/Game/_game.html.twig
+++ b/src/Btn/AppBundle/Resources/views/Game/_game.html.twig
@@ -1,13 +1,13 @@
 <div class="panel panel-default">
     <div class="panel-heading"><h4>
-        <a href="#">{{ 'Infamous'|upper }} {{ counter }}</a></h4>
-        Ubisoft | 22-05-2004
+        <a href="{{ path('game_show', {'id': game.id}) }}">{{ game.name|upper }}</a></h4>
+        {{ game.developer }} | {{ game.releasedAt|date('d-m-Y') }}
     </div>
     <div class="panel-body">
-        {% for letter in 'a'..'z' %}
-            {{ letter }}
-        {% endfor %}
-      <a href="{{ path('game_show', {'id': counter}) }}">Read more</a>
+        {{ game.description }}
+        <a href="{{ path('game_show', {'id': game.id}) }}">Read more</a>
     </div>
-    <div class="panel-footer">Platforms: PS4, PS3</div>
+    <div class="panel-footer">
+        Category: {{ game.category.name }}, Platforms: PS4, PS3
+    </div>
 </div>
