--- a/app/Resources/views/_menu.html.twig
+++ b/app/Resources/views/_menu.html.twig
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav">
-    <li class="active"><a href="#">Listing</a></li>
-    <li><a href="#">Add new game</a></li>
+    <li class="active"><a href="{{ path('games_list') }}">Listing</a></li>
+    <li><a href="{{ path('game_new') }}">Add new game</a></li>
     <li><a href="#">About</a></li>
 </ul>
