--- a/src/Btn/AppBundle/Resources/views/layout.html.twig
+++ b/src/Btn/AppBundle/Resources/views/layout.html.twig
@@ -2,6 +2,11 @@
 
 {% block body %}
 <div class="container">
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <div class="alert alert-success">
+            {{ flashMessage }}
+        </div>
+    {% endfor %}
     <div class="row">
         <div class="col-md-4">
             {% block sidebar %}
